--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "cloudinary": "^1.37.3",
+    "cloudinary-core": "^2.13.0",
+    "cloudinary-react": "^1.8.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.7"
   }
 }
