--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/sequelize-adapter": "^1.0.1",
+    "@next-auth/sequelize-adapter": "^1.0.8",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -23,6 +25,7 @@
     "next-cloudinary": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sequelize": "^6.32.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
